--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://twaran1998.github.io/Portfolio-Website",
+  "homepage": "https://twaran1998.github.io/Portfolio-Web",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
